ci/travis: fix go devel version to tip
gimme has been removed the 'master' version config?

Signed-off-by: Koichi Shiraishi <zchee.io@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ osx_image: xcode8.2
 language: go
 go:
   - 1.8.x
-  - master
+  - tip
 matrix:
   allow_failures:
-    - master
+    - tip
   fast_finish: true
 
 install:
