all: rollback import path to github.com/go-darwin
Signed-off-by: Koichi Shiraishi <zchee.io@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 
 darwin: &darwin
   executor: golang/macos
-  working_directory: ~/go/src/go-darwin.dev/apfs
+  working_directory: ~/go/src/github.com/go-darwin/apfs
 
 jobs:
   test:
